@startuml
'https://plantuml.com/class-diagram

 class NewTestUI
class NewTestController
class Company
class TestType

NewTestUI..>NewTestController
NewTestController..>Company
NewTestController..>TestType
Company "1" --> "*" TestType : adopts
class NewTestController {
----
registerNewTestController( name, descriptionTest,  code,  collectingMethods)
saveTest()
}
class Company{
-designation
----
+registerNewTestController( name,  descriptionTest,  code,  collectingMethods)
+saveTest(newTest)
+ValidateNewTest(newTest)
-addNewTest
}
class TestType{
-name
-descriptionTest
-code
-collectingMethods
----
+TestType(name, descriptionTest, code,  collectingMethods)
}



@enduml